# job-radar-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INTEGRATION_SPEC.md  READINESS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent/: bootstrap.py  budget.py  cli.py  cloud.py  config.py  doctor.py  graph.py  links.py  llm.py  llm_litellm.py  lock.py  loop.py  matching.py  models.py  nodes.py  observability.py  paths.py  prompts.py  reader.py  reader_mcp.py  requirements.txt  runner.py  schemas.py  state.py  writer.py  writer_rest.py
agent/seed_prompts/: classifier.md  critic.md  recruiter.md
deploy/local/: com.jobradar.emailagent.plist  run-agent.sh
docs/: DEPLOYMENT.md  agent-integration.md
job_radar_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_email/: config.py  requirements.txt  server.py
mcp_email/providers/: base.py  gmail.py  imap.py  proton.py
notifications/: base.py  discord.py  dispatch.py  slack.py  stubs.py  telegram.py
prompts/: classifier.md  critic.md  retry_feedback.md
scripts/: doctor.py  gmail_auth.py  harvest_fixtures.py  mint_agent_key.py  run_cloud.py  run_local.py  run_loop.py  scrub_fixtures.py  smoke_gmail.py  smoke_jobradar.py  smoke_proton.py
tests/: test_agent_graph.py  test_budget.py  test_cloud.py  test_email_reader.py  test_fixtures.py  test_links.py  test_llm_client.py  test_loop.py  test_notifications.py  test_observability.py  test_reader_mcp.py  test_runner.py
(+13 files in other folders)
